--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
    <head>
+      <title>My Favorite Movies</title>
    </head>
    <body>
       <!-- Write your HTML in this file! -->
+      <p>© 2021 Matt  Belz</p>
    </body>
 </html>
