--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
    </head>
    <body>
       <!-- Write your HTML in this file! -->
-      <p>© 2021 Matt  Belz</p>
+      <p>sgdflkuhasdlkjfhasl</p>
+      
+      <footer>© 2021 Matt  Belz</footer>
    </body>
 </html>
