--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <!-- Write your HTML in this file! -->
       <p>sgdflkuhasdlkjfhasl</p>
       
-      <footer>© 2021 Matt  Belz</footer>
+      <!-- <footer>© 2021 Matt  Belz</footer> -->
    </body>
+   <footer>© 2021 Matt  Belz</footer>
 </html>
