--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
       <!-- Write your HTML in this file! -->
       <header>
       <h1> My Favorite Movies</h1>
-         <ul>
+   <main>
+      <article>
+      <ul>
             <div style="width:600px; margin:left auto;word-wrap: break-word;">
             <li>Fight Club</li>
             <img src="./images/Fight Club.jpeg" alt="Fight CLub" style="width:600px;height:250px;">
@@ -25,7 +27,7 @@
             <a href =https://www.youtube.com/watch?v=6hB3S9bIaco>Check out the trailer!</a>
             <hr size="1" width="100%" color="black">
             <li>The Usual Suspects</li>
-            <img src="./images/Usual Suspects.jpeg" alt="The Usual Suspects" style="width:600px;height:250px;">
+            <img src="./images/Usual Suspects.jpg" alt="The Usual Suspects" style="width:600px;height:250px;">
             <p>A sole survivor tells of the twisty events leading up to a horrific gun battle on a boat, which began when five criminals met at a seemingly random police lineup.</p>
             <a href =https://www.youtube.com/watch?v=oiXdPolca5w>Check out the trailer!</a>
             <hr size="1" width="100%" color="black">
@@ -65,7 +67,9 @@
             <hr size="1" width="100%" color="black">
          </ul>
          </div>
+      </article>
+      </main> 
          </header>
-      <footer>© 2021 Matt  Belz</footer>
+      <footer>&#169 2021 Matt  Belz</footer>
    </body>
 </html>
