--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href =https://www.youtube.com/watch?v=SUXWAEX2jlg>Check out the trailer!</a>
             <hr size="1" width="100%" color="black">
             <li>The Princess Bride</li>
-            <img src="./images/The Princess Bride.jpg" alt="The Princess Bride" style="width:900px;height:450px;">
+            <img src="./images/princess-bride-.jpeg" alt="The Princess Bride" style="width:900px;height:450px;">
             <p>While homesick in bed, a young boy's grandfather reads him the story of a farmboy-turned-pirate who encounters numerous obstacles, enemies and allies in his quest to be reunited with his true love.</p>
             <a href =https://www.youtube.com/watch?v=WNNUcHRiPS8>Check out the trailer!</a>
             <hr size="1" width="100%" color="black">
