--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
    <head>
       <title>My Favorite Movies</title>
+      <link rel="stylesheet" type="text/css" href="styles.css">
    </head>
    <body>
       <!-- Write your HTML in this file! -->
@@ -70,6 +71,8 @@
       </article>
       </main> 
          </header>
+         <h3 id=mainHeading>You won't like me when I'm angry...</h3>
+         <p id=testP class="funParagraph">-Bruce Banner</p>
       <footer>&#169 2021 Matt  Belz</footer>
    </body>
 </html>
