--- a/index.html
+++ b/index.html
@@ -73,6 +73,6 @@
          </header>
          <h3 id=mainHeading>You won't like me when I'm angry...</h3>
          <p id=testP class="funParagraph">-Bruce Banner</p>
-      <footer>&#169 2021 Matt  Belz</footer>
+      <footer>&copy 2021 Matt  Belz</footer>
    </body>
 </html>
