--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    <head>
       <title>My Favorite Movies</title>
       <link rel="stylesheet" type="text/css" href="styles.css">
+      <link rel="stylesheet" href="normalize.css">
    </head>
    <body>
       <!-- Write your HTML in this file! -->
@@ -73,6 +74,6 @@
          </header>
          <h3 id=mainHeading>You won't like me when I'm angry...</h3>
          <p id=testP class="funParagraph">-Bruce Banner</p>
-      <footer>&copy 2021 Matt  Belz</footer>
+      <footer>&copy; 2021 Matt  Belz</footer>
    </body>
 </html>
