--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <img src="./images/Back-to-the-Future-Movies.jpeg" alt="Back to the Future" style="width:900px;height:450px;">
             <p>Back to the Futre is a nearly perfect film, and the sequels don't disappoint. I mean, what kid didn't want a Hoverboard!?</p>
             <hr size="1" width="100%" color="black">
-            <li>Star Wars - Marvel</li>
+            <li>Star Wars &amp; Marvel</li>
             <img src="./images/Star Wars - Marvel.jpeg" alt="Star Wars - Marvel" style="width:900px;height:450px;">
             <p>These movies sum up my childhood, it's like Christmas morning every time they come on screen!</p>
             <hr size="1" width="100%" color="black">
